--- a/world/templates/world/entry_list.html
+++ b/world/templates/world/entry_list.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <script>
+    <script type="text/javascript">
         var map = L.map('map').
         setView([-27.450508, -58.9874573], 
         14);
@@ -26,26 +26,27 @@
         }).addTo(map);
    
         L.control.scale().addTo(map);
+
         {% for e in object_list %}
           L.marker({{e.lat_lng}}).addTo(map).bindPopup('({e})');
         {% endfor %}
 
-         // var lc = L.control.locate({
-        // position: 'topleft',
-        // strings: {
-        // title: "Mi ubicación"
-        // }
-        // }).addTo(map);
+         var lc = L.control.locate({
+        position: 'topleft',
+        strings: {
+        title: "Mi ubicación"
+        }
+        }).addTo(map);
 
-        // L.Routing.control({
-        // waypoints: [
-        // L.latLng(),
-        // L.latLng()
-        // ],
-        // routeWhileDragging: true,
-        // geocoder: L.Control.Geocoder.nominatim(),
+        L.Routing.control({
+        waypoints: [
+        L.latLng(),
+        L.latLng()
+        ],
+        routeWhileDragging: true,
+        geocoder: L.Control.Geocoder.nominatim(),
         
-        // }).addTo(map);
+        }).addTo(map);
     </script>
     <div class="flex">
         <div><img src="https://i.ibb.co/RynscBM/logo.png" alt="logo" width="260" height="150"></div>
