--- a/world/templates/mapa.html
+++ b/world/templates/mapa.html
@@ -56,7 +56,7 @@
         <input type="text" id="inicio" name="inicio" placeholder="Indique punto de partida" />
         <label id="fin">Fin</label>
         <input type="text" id="apellido" name="apellido" placeholder="Indique destino" />
-        <input type="submit" value="Buscar" />
+        <a href="{% url 'lista' %}" class="col stretched-link">Buscar</a>
       </div>
     </form>
 
